# hq_job

./: .gitignore  Dockerfile  README.md  build.sh  hq_job_launcher.bat  hq_job_server_entry.py  pyproject.toml  start.bat  start.sh
.qoder/specs/: fastapi-task-management.md  resource-monitoring-ui.md  ssh-web-terminal.md  task-management-web-ui.md  tauri-desktop-packaging.md
desktop/: package-lock.json  package.json
desktop/scripts/: build.js
desktop/src/: index.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  config.rs  logger.rs  main.rs  sidecar.rs
hq_job/: autodl_client.py  common_utils.py  file_utils.py  job_engine.py  job_engine_autodl.py  job_engine_local.py  server.py  server_client.py  server_models.py  ssh_utils.py  web_ui.py
hq_job/scripts/: job_worker_entry.py  job_worker_entry_autodl.py  pack_files.py  unpack_files.py
hq_job/storage/: __init__.py  base.py  cos.py  coscmd.py  scp.py
scripts/: local_job_list.py  local_job_stop.py
test/: gen_job_args.py  hq_det_test.py  job_engine_local_test.ipynb  read_env.sh  script.py  test_autodl_client.py  test_autodl_entry.sh  test_cos_client.py  test_file_utils.py  test_job_engine.py  test_job_engine_autodl.py  test_job_worker_entry_autodl.py  test_long_running_job.py  test_read_env.py  test_server_client.py
