[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hq_job"
version = "0.0.1"
description = "Job manipulation library for high quality image processing framework"
authors = [
    { name = "Xiaochuan Zou", email = "zouxiaochuan@163.com" }
]
license = { text = "MIT" }
dependencies = [
    "numpy",
    "scipy",
]
requires-python = ">=3.6"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]

[tool.setuptools.package-data]
where = ["."]
"*" = ["*.caffemodel", "*.prototxt"]